infrastructure/cfn/UnicornStack.yaml
Metadata:
  cdk_nag:
    rules_to_suppress:
      - reason: Workshop environment does not need VPC flow logs
        id: AwsSolutions-VPC7
      - reason: ELB is accessible from the Internet to allow application testing
        id: AwsSolutions-EC23
      - reason: AWS Managed policies are acceptable for the workshop
        id: AwsSolutions-IAM4
      - reason: Workshop environment use CDK default execution role for Lambdas
        id: AwsSolutions-IAM5
      - reason: Workshop instance doesn't need autoscaling
        id: AwsSolutions-EC28
      - reason: Workshop instance doesn't need autoscaling
        id: AwsSolutions-EC29
      - reason: Ephemeral workshop environment does not need to rotate secrets
        id: AwsSolutions-SMG4
      - reason: Workshop environment should be accessible from any Geo
        id: AwsSolutions-CFR1
      - reason: Ephemeral workshop environment does not need WAF
        id: AwsSolutions-CFR2
      - reason: Ephemeral workshop environment does not need logging
        id: AwsSolutions-CFR3
      - reason: Workshop instance uses http
        id: AwsSolutions-CFR4
      - reason: Workshop instance uses http
        id: AwsSolutions-CFR5
      - reason: Workshop environment is ephemeral and does not need encryption
        id: AwsSolutions-RDS2
      - reason: Workshop environment uses user/password authentication
        id: AwsSolutions-RDS6
      - reason: Workshop environment is ephemeral and the database should be deleted by the end of the workshop
        id: AwsSolutions-RDS10
Resources:
  UnicornVpcB410D40E:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: UnicornVpc
  UnicornVpcPublicSubnet1Subnet15502AD4:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: UnicornStack/UnicornVpc/UnicornVpc/PublicSubnet1
      VpcId:
        Ref: UnicornVpcB410D40E
  UnicornVpcPublicSubnet1RouteTable1B0A8222:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: UnicornStack/UnicornVpc/UnicornVpc/PublicSubnet1
      VpcId:
        Ref: UnicornVpcB410D40E
  UnicornVpcPublicSubnet1RouteTableAssociationBCC3E08B:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: UnicornVpcPublicSubnet1RouteTable1B0A8222
      SubnetId:
        Ref: UnicornVpcPublicSubnet1Subnet15502AD4
  UnicornVpcPublicSubnet1DefaultRoute0D332AA5:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: UnicornVpcIGWE00ECEB8
      RouteTableId:
        Ref: UnicornVpcPublicSubnet1RouteTable1B0A8222
    DependsOn:
      - UnicornVpcVPCGWC37B571E
  UnicornVpcPublicSubnet1EIP389FBA62:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: UnicornStack/UnicornVpc/UnicornVpc/PublicSubnet1
  UnicornVpcPublicSubnet1NATGateway4B2478BD:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - UnicornVpcPublicSubnet1EIP389FBA62
          - AllocationId
      SubnetId:
        Ref: UnicornVpcPublicSubnet1Subnet15502AD4
      Tags:
        - Key: Name
          Value: UnicornStack/UnicornVpc/UnicornVpc/PublicSubnet1
    DependsOn:
      - UnicornVpcPublicSubnet1DefaultRoute0D332AA5
      - UnicornVpcPublicSubnet1RouteTableAssociationBCC3E08B
  UnicornVpcPublicSubnet2Subnet6BF05257:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: UnicornStack/UnicornVpc/UnicornVpc/PublicSubnet2
      VpcId:
        Ref: UnicornVpcB410D40E
  UnicornVpcPublicSubnet2RouteTableA6C548E0:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: UnicornStack/UnicornVpc/UnicornVpc/PublicSubnet2
      VpcId:
        Ref: UnicornVpcB410D40E
  UnicornVpcPublicSubnet2RouteTableAssociation274BC42B:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: UnicornVpcPublicSubnet2RouteTableA6C548E0
      SubnetId:
        Ref: UnicornVpcPublicSubnet2Subnet6BF05257
  UnicornVpcPublicSubnet2DefaultRouteF6A8A4EC:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: UnicornVpcIGWE00ECEB8
      RouteTableId:
        Ref: UnicornVpcPublicSubnet2RouteTableA6C548E0
    DependsOn:
      - UnicornVpcVPCGWC37B571E
  UnicornVpcPrivateSubnet1Subnet28039B51:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: UnicornStack/UnicornVpc/UnicornVpc/PrivateSubnet1
      VpcId:
        Ref: UnicornVpcB410D40E
  UnicornVpcPrivateSubnet1RouteTable1F3D3E97:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: UnicornStack/UnicornVpc/UnicornVpc/PrivateSubnet1
      VpcId:
        Ref: UnicornVpcB410D40E
  UnicornVpcPrivateSubnet1RouteTableAssociation8168E0C0:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: UnicornVpcPrivateSubnet1RouteTable1F3D3E97
      SubnetId:
        Ref: UnicornVpcPrivateSubnet1Subnet28039B51
  UnicornVpcPrivateSubnet1DefaultRoute1C5D08BE:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: UnicornVpcPublicSubnet1NATGateway4B2478BD
      RouteTableId:
        Ref: UnicornVpcPrivateSubnet1RouteTable1F3D3E97
  UnicornVpcPrivateSubnet2Subnet07F3100F:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: 10.0.3.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: UnicornStack/UnicornVpc/UnicornVpc/PrivateSubnet2
      VpcId:
        Ref: UnicornVpcB410D40E
  UnicornVpcPrivateSubnet2RouteTableA273E65A:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: UnicornStack/UnicornVpc/UnicornVpc/PrivateSubnet2
      VpcId:
        Ref: UnicornVpcB410D40E
  UnicornVpcPrivateSubnet2RouteTableAssociationE0DC3803:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: UnicornVpcPrivateSubnet2RouteTableA273E65A
      SubnetId:
        Ref: UnicornVpcPrivateSubnet2Subnet07F3100F
  UnicornVpcPrivateSubnet2DefaultRoute7AE89C7E:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: UnicornVpcPublicSubnet1NATGateway4B2478BD
      RouteTableId:
        Ref: UnicornVpcPrivateSubnet2RouteTableA273E65A
  UnicornVpcIGWE00ECEB8:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: UnicornVpc
  UnicornVpcVPCGWC37B571E:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId:
        Ref: UnicornVpcIGWE00ECEB8
      VpcId:
        Ref: UnicornVpcB410D40E
  UnicornStackpostgres267CB88C:
    Type: AWS::SecretsManager::Secret
    Properties:
      Description:
        Fn::Join:
          - ""
          - - "Generated by the CDK for stack: "
            - Ref: AWS::StackName
      GenerateSecretString:
        ExcludeCharacters: " %+~`#$&*()|[]{}:;<>?!'/@\"\\"
        GenerateStringKey: password
        PasswordLength: 30
        SecretStringTemplate: '{"username":"postgres"}'
      Name: unicornstore-db-secret
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
  UnicornStackpostgresAttachment1B62561A:
    Type: AWS::SecretsManager::SecretTargetAttachment
    Properties:
      SecretId:
        Ref: UnicornStackpostgres267CB88C
      TargetId:
        Ref: UnicornStackUnicornDatabase6FE2DF4E
      TargetType: AWS::RDS::DBCluster
  UnicornStackDatabaseSecurityGroupD015465F:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: UnicornStack/UnicornStack/DatabaseSecurityGroup
      GroupName: Database Security Group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow outbound PostgreSQL responses
          FromPort: 5432
          IpProtocol: tcp
          ToPort: 5432
      SecurityGroupIngress:
        - CidrIp: 10.0.0.0/16
          Description: Allow Database Traffic from VPC
          FromPort: 5432
          IpProtocol: tcp
          ToPort: 5432
      VpcId:
        Ref: UnicornVpcB410D40E
  UnicornStackUnicornDatabaseSubnetsFC71DF6A:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnets for UnicornDatabase database
      SubnetIds:
        - Ref: UnicornVpcPrivateSubnet1Subnet28039B51
        - Ref: UnicornVpcPrivateSubnet2Subnet07F3100F
  UnicornStackUnicornDatabase6FE2DF4E:
    Type: AWS::RDS::DBCluster
    Properties:
      CopyTagsToSnapshot: true
      DBClusterParameterGroupName: default.aurora-postgresql16
      DBSubnetGroupName:
        Ref: UnicornStackUnicornDatabaseSubnetsFC71DF6A
      DatabaseName: unicorns
      EnableHttpEndpoint: true
      Engine: aurora-postgresql
      EngineVersion: "16.6"
      MasterUserPassword:
        Fn::Join:
          - ""
          - - "{{resolve:secretsmanager:"
            - Ref: UnicornStackpostgres267CB88C
            - :SecretString:password::}}
      MasterUsername:
        Fn::Join:
          - ""
          - - "{{resolve:secretsmanager:"
            - Ref: UnicornStackpostgres267CB88C
            - :SecretString:username::}}
      Port: 5432
      ServerlessV2ScalingConfiguration:
        MaxCapacity: 4
        MinCapacity: 0
      VpcSecurityGroupIds:
        - Fn::GetAtt:
            - UnicornStackDatabaseSecurityGroupD015465F
            - GroupId
    UpdateReplacePolicy: Snapshot
    DeletionPolicy: Snapshot
  UnicornStackUnicornDatabasewriter8468B19D:
    Type: AWS::RDS::DBInstance
    Properties:
      DBClusterIdentifier:
        Ref: UnicornStackUnicornDatabase6FE2DF4E
      DBInstanceClass: db.serverless
      Engine: aurora-postgresql
      PromotionTier: 0
      PubliclyAccessible: false
    DependsOn:
      - UnicornVpcPrivateSubnet1DefaultRoute1C5D08BE
      - UnicornVpcPrivateSubnet1RouteTableAssociation8168E0C0
      - UnicornVpcPrivateSubnet2DefaultRoute7AE89C7E
      - UnicornVpcPrivateSubnet2RouteTableAssociationE0DC3803
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
  UnicornStackSsmParameterDatabaseJDBCConnectionString693CD16A:
    Type: AWS::SSM::Parameter
    Properties:
      AllowedPattern: .*
      Description: databaseJDBCConnectionString
      Name: databaseJDBCConnectionString
      Tier: Standard
      Type: String
      Value:
        Fn::Join:
          - ""
          - - jdbc-secretsmanager:postgresql://
            - Fn::GetAtt:
                - UnicornStackUnicornDatabase6FE2DF4E
                - Endpoint.Address
            - :5432/unicorns
  UnicornStackUnicornEventBus168F98DC:
    Type: AWS::Events::EventBus
    Properties:
      Name: unicorns
  UnicornStackunicornstoreecr998DAC20:
    Type: AWS::ECR::Repository
    Properties:
      ImageScanningConfiguration:
        ScanOnPush: false
      RepositoryName: unicorn-store-spring
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
  UnicornStackunicornstoreapprunnerrole0E316010:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: tasks.apprunner.amazonaws.com
        Version: "2012-10-17"
      RoleName: unicornstore-apprunner-role
  UnicornStackunicornstoreapprunnerroleDefaultPolicyF082F357:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action: xray:PutTraceSegments
            Effect: Allow
            Resource: "*"
          - Action: events:PutEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - UnicornStackUnicornEventBus168F98DC
                - Arn
          - Action:
              - secretsmanager:DescribeSecret
              - secretsmanager:GetSecretValue
            Effect: Allow
            Resource:
              Ref: UnicornStackpostgres267CB88C
          - Action:
              - ssm:DescribeParameters
              - ssm:GetParameter
              - ssm:GetParameterHistory
              - ssm:GetParameters
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - "arn:"
                  - Ref: AWS::Partition
                  - ":ssm:"
                  - Ref: AWS::Region
                  - ":"
                  - Ref: AWS::AccountId
                  - :parameter/
                  - Ref: UnicornStackSsmParameterDatabaseJDBCConnectionString693CD16A
        Version: "2012-10-17"
      PolicyName: UnicornStackunicornstoreapprunnerroleDefaultPolicyF082F357
      Roles:
        - Ref: UnicornStackunicornstoreapprunnerrole0E316010
  UnicornStackunicornstoreapprunnerecraccessrole326F08C1:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: build.apprunner.amazonaws.com
        Version: "2012-10-17"
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AWSAppRunnerServicePolicyForECRAccess
      RoleName: unicornstore-apprunner-ecr-access-role
  UnicornStackunicornstoreecstaskrole937C0D0A:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/CloudWatchLogsFullAccess
        - arn:aws:iam::aws:policy/AmazonSSMReadOnlyAccess
      RoleName: unicornstore-ecs-task-role
  UnicornStackunicornstoreecstaskroleDefaultPolicy8100AD88:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - cloudwatch:PutMetricData
              - logs:CreateLogGroup
              - logs:CreateLogStream
              - logs:DescribeLogGroups
              - logs:DescribeLogStreams
              - logs:PutLogEvents
              - logs:PutRetentionPolicy
              - ssm:GetParameters
              - xray:GetSamplingRules
              - xray:GetSamplingStatisticSummaries
              - xray:GetSamplingTargets
              - xray:PutTelemetryRecords
              - xray:PutTraceSegments
            Effect: Allow
            Resource: "*"
          - Action: events:PutEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - UnicornStackUnicornEventBus168F98DC
                - Arn
          - Action:
              - secretsmanager:DescribeSecret
              - secretsmanager:GetSecretValue
            Effect: Allow
            Resource:
              Ref: UnicornStackpostgres267CB88C
          - Action:
              - ssm:DescribeParameters
              - ssm:GetParameter
              - ssm:GetParameterHistory
              - ssm:GetParameters
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - "arn:"
                  - Ref: AWS::Partition
                  - ":ssm:"
                  - Ref: AWS::Region
                  - ":"
                  - Ref: AWS::AccountId
                  - :parameter/
                  - Ref: UnicornStackSsmParameterDatabaseJDBCConnectionString693CD16A
        Version: "2012-10-17"
      PolicyName: UnicornStackunicornstoreecstaskroleDefaultPolicy8100AD88
      Roles:
        - Ref: UnicornStackunicornstoreecstaskrole937C0D0A
  UnicornStackunicornstoreecstaskexecutionrole52E0B540:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
        - arn:aws:iam::aws:policy/CloudWatchLogsFullAccess
        - arn:aws:iam::aws:policy/AmazonSSMReadOnlyAccess
      RoleName: unicornstore-ecs-task-execution-role
  UnicornStackunicornstoreecstaskexecutionroleDefaultPolicy91B22474:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - cloudwatch:PutMetricData
              - logs:CreateLogGroup
              - logs:CreateLogStream
              - logs:DescribeLogGroups
              - logs:DescribeLogStreams
              - logs:PutLogEvents
              - logs:PutRetentionPolicy
              - ssm:GetParameters
              - xray:GetSamplingRules
              - xray:GetSamplingStatisticSummaries
              - xray:GetSamplingTargets
              - xray:PutTelemetryRecords
              - xray:PutTraceSegments
            Effect: Allow
            Resource: "*"
          - Action:
              - secretsmanager:DescribeSecret
              - secretsmanager:GetSecretValue
            Effect: Allow
            Resource:
              Ref: UnicornStackpostgres267CB88C
          - Action:
              - ssm:DescribeParameters
              - ssm:GetParameter
              - ssm:GetParameterHistory
              - ssm:GetParameters
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - "arn:"
                  - Ref: AWS::Partition
                  - ":ssm:"
                  - Ref: AWS::Region
                  - ":"
                  - Ref: AWS::AccountId
                  - :parameter/
                  - Ref: UnicornStackSsmParameterDatabaseJDBCConnectionString693CD16A
        Version: "2012-10-17"
      PolicyName: UnicornStackunicornstoreecstaskexecutionroleDefaultPolicy91B22474
      Roles:
        - Ref: UnicornStackunicornstoreecstaskexecutionrole52E0B540
  UnicornStackunicornstoreekspodrole0982F9CB:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action:
              - sts:AssumeRole
              - sts:TagSession
            Effect: Allow
            Principal:
              Service: pods.eks.amazonaws.com
        Version: "2012-10-17"
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/CloudWatchAgentServerPolicy
      RoleName: unicornstore-eks-pod-role
  UnicornStackunicornstoreekspodroleDefaultPolicy2240237A:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action: xray:PutTraceSegments
            Effect: Allow
            Resource: "*"
          - Action: events:PutEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - UnicornStackUnicornEventBus168F98DC
                - Arn
          - Action:
              - secretsmanager:DescribeSecret
              - secretsmanager:GetSecretValue
            Effect: Allow
            Resource:
              Ref: UnicornStackpostgres267CB88C
          - Action:
              - ssm:DescribeParameters
              - ssm:GetParameter
              - ssm:GetParameterHistory
              - ssm:GetParameters
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - "arn:"
                  - Ref: AWS::Partition
                  - ":ssm:"
                  - Ref: AWS::Region
                  - ":"
                  - Ref: AWS::AccountId
                  - :parameter/
                  - Ref: UnicornStackSsmParameterDatabaseJDBCConnectionString693CD16A
        Version: "2012-10-17"
      PolicyName: UnicornStackunicornstoreekspodroleDefaultPolicy2240237A
      Roles:
        - Ref: UnicornStackunicornstoreekspodrole0982F9CB
  WorkshopUserRole2CD0A22F:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
        Version: "2012-10-17"
      ManagedPolicyArns:
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/AdministratorAccess
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/AmazonEC2ContainerRegistryFullAccess
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/ReadOnlyAccess
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/AmazonSSMManagedInstanceCore
      RoleName: java-on-aws-workshop-user
  WorkshopUserRoleDefaultPolicy945C76B1:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action: events:PutEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - UnicornStackUnicornEventBus168F98DC
                - Arn
          - Action:
              - secretsmanager:DescribeSecret
              - secretsmanager:GetSecretValue
            Effect: Allow
            Resource:
              - Ref: UnicornStackpostgres267CB88C
              - Ref: VSCodeIdeIdePasswordSecret39AD78F3
          - Action:
              - ssm:DescribeParameters
              - ssm:GetParameter
              - ssm:GetParameterHistory
              - ssm:GetParameters
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - "arn:"
                  - Ref: AWS::Partition
                  - ":ssm:"
                  - Ref: AWS::Region
                  - ":"
                  - Ref: AWS::AccountId
                  - :parameter/
                  - Ref: UnicornStackSsmParameterDatabaseJDBCConnectionString693CD16A
          - Action:
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - VSCodeIdeIdeLogGroup364F2B78
                - Arn
        Version: "2012-10-17"
      PolicyName: WorkshopUserRoleDefaultPolicy945C76B1
      Roles:
        - Ref: WorkshopUserRole2CD0A22F
  AppSecurityGroupC396D536:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: App security group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: HTTP to an application
          FromPort: 8080
          IpProtocol: tcp
          ToPort: 8080
      VpcId:
        Ref: UnicornVpcB410D40E
  VSCodeIdeIdePrefixListFunctionServiceRoleE64D8247:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
        Version: "2012-10-17"
      ManagedPolicyArns:
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
  VSCodeIdeIdePrefixListFunctionServiceRoleDefaultPolicy244F9A17:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action: ec2:DescribeManagedPrefixLists
            Effect: Allow
            Resource: "*"
        Version: "2012-10-17"
      PolicyName: VSCodeIdeIdePrefixListFunctionServiceRoleDefaultPolicy244F9A17
      Roles:
        - Ref: VSCodeIdeIdePrefixListFunctionServiceRoleE64D8247
  VSCodeIdeIdePrefixListFunction06300AAE:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        ZipFile: |-
          from __future__ import print_function
          import boto3
          import traceback
          import cfnresponse

          def lambda_handler(event, context):
              print('Event: {}'.format(event))
              print('context: {}'.format(context))
              responseData = {}

              status = cfnresponse.SUCCESS

              if event['RequestType'] == 'Delete':
                  responseData = {'Success': 'Custom Resource removed'}
                  cfnresponse.send(event, context, status, responseData, 'CustomResourcePhysicalID')
              else:
                  try:
                      # Open AWS clients
                      ec2 = boto3.client('ec2')

                      res = ec2.describe_managed_prefix_lists(
                         Filters=[{
                            'Name': 'prefix-list-name',
                            'Values': ['com.amazonaws.global.cloudfront.origin-facing']
                         }]
                      )

                      responseData = {'PrefixListId': str(res['PrefixLists'][0]['PrefixListId'])}
                  except Exception as e:
                      status = cfnresponse.FAILED
                      tb_err = traceback.format_exc()
                      print(tb_err)
                      responseData = {'Error': tb_err}
                  finally:
                      cfnresponse.send(event, context, status, responseData, 'CustomResourcePhysicalID')
      Handler: index.lambda_handler
      Role:
        Fn::GetAtt:
          - VSCodeIdeIdePrefixListFunctionServiceRoleE64D8247
          - Arn
      Runtime: python3.13
      Timeout: 180
    DependsOn:
      - VSCodeIdeIdePrefixListFunctionServiceRoleDefaultPolicy244F9A17
      - VSCodeIdeIdePrefixListFunctionServiceRoleE64D8247
  VSCodeIdeIdePrefixListResourceF63186FA:
    Type: AWS::CloudFormation::CustomResource
    Properties:
      ServiceToken:
        Fn::GetAtt:
          - VSCodeIdeIdePrefixListFunction06300AAE
          - Arn
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
  VSCodeIdeIdeSecurityGroup69EC68AF:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: IDE security group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId:
        Ref: UnicornVpcB410D40E
  VSCodeIdeIdeSecurityGroupfromIndirectPeer80614C2C39:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: HTTP from CloudFront only
      FromPort: 80
      GroupId:
        Fn::GetAtt:
          - VSCodeIdeIdeSecurityGroup69EC68AF
          - GroupId
      IpProtocol: tcp
      SourcePrefixListId:
        Fn::GetAtt:
          - VSCodeIdeIdePrefixListResourceF63186FA
          - PrefixListId
      ToPort: 80
  VSCodeIdeInstanceProfileE440C0DA:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: WorkshopUserRole2CD0A22F
    DependsOn:
      - UnicornVpcIGWE00ECEB8
      - UnicornVpcPrivateSubnet1DefaultRoute1C5D08BE
      - UnicornVpcPrivateSubnet1RouteTable1F3D3E97
      - UnicornVpcPrivateSubnet1RouteTableAssociation8168E0C0
      - UnicornVpcPrivateSubnet1Subnet28039B51
      - UnicornVpcPrivateSubnet2DefaultRoute7AE89C7E
      - UnicornVpcPrivateSubnet2RouteTableA273E65A
      - UnicornVpcPrivateSubnet2RouteTableAssociationE0DC3803
      - UnicornVpcPrivateSubnet2Subnet07F3100F
      - UnicornVpcPublicSubnet1DefaultRoute0D332AA5
      - UnicornVpcPublicSubnet1EIP389FBA62
      - UnicornVpcPublicSubnet1NATGateway4B2478BD
      - UnicornVpcPublicSubnet1RouteTable1B0A8222
      - UnicornVpcPublicSubnet1RouteTableAssociationBCC3E08B
      - UnicornVpcPublicSubnet1Subnet15502AD4
      - UnicornVpcPublicSubnet2DefaultRouteF6A8A4EC
      - UnicornVpcPublicSubnet2RouteTableA6C548E0
      - UnicornVpcPublicSubnet2RouteTableAssociation274BC42B
      - UnicornVpcPublicSubnet2Subnet6BF05257
      - UnicornVpcB410D40E
      - UnicornVpcVPCGWC37B571E
  VSCodeIde6CDD4972:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            DeleteOnTermination: true
            Encrypted: true
            VolumeSize: 50
            VolumeType: gp3
      IamInstanceProfile:
        Ref: VSCodeIdeInstanceProfileE440C0DA
      ImageId:
        Ref: SsmParameterValueawsserviceamiamazonlinuxlatestal2023amikernel61x8664C96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: t3.medium
      SecurityGroupIds:
        - Fn::GetAtt:
            - VSCodeIdeIdeSecurityGroup69EC68AF
            - GroupId
        - Fn::GetAtt:
            - AppSecurityGroupC396D536
            - GroupId
      SubnetId:
        Ref: UnicornVpcPublicSubnet1Subnet15502AD4
      Tags:
        - Key: Name
          Value: IdeInstance
      UserData:
        Fn::Base64: "#!/bin/bash"
    DependsOn:
      - UnicornVpcIGWE00ECEB8
      - UnicornVpcPrivateSubnet1DefaultRoute1C5D08BE
      - UnicornVpcPrivateSubnet1RouteTable1F3D3E97
      - UnicornVpcPrivateSubnet1RouteTableAssociation8168E0C0
      - UnicornVpcPrivateSubnet1Subnet28039B51
      - UnicornVpcPrivateSubnet2DefaultRoute7AE89C7E
      - UnicornVpcPrivateSubnet2RouteTableA273E65A
      - UnicornVpcPrivateSubnet2RouteTableAssociationE0DC3803
      - UnicornVpcPrivateSubnet2Subnet07F3100F
      - UnicornVpcPublicSubnet1DefaultRoute0D332AA5
      - UnicornVpcPublicSubnet1EIP389FBA62
      - UnicornVpcPublicSubnet1NATGateway4B2478BD
      - UnicornVpcPublicSubnet1RouteTable1B0A8222
      - UnicornVpcPublicSubnet1RouteTableAssociationBCC3E08B
      - UnicornVpcPublicSubnet1Subnet15502AD4
      - UnicornVpcPublicSubnet2DefaultRouteF6A8A4EC
      - UnicornVpcPublicSubnet2RouteTableA6C548E0
      - UnicornVpcPublicSubnet2RouteTableAssociation274BC42B
      - UnicornVpcPublicSubnet2Subnet6BF05257
      - UnicornVpcB410D40E
      - UnicornVpcVPCGWC37B571E
      - WorkshopUserRoleDefaultPolicy945C76B1
      - WorkshopUserRole2CD0A22F
  VSCodeIdeIdeBootstrapFunctionServiceRole45BD56C6:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
        Version: "2012-10-17"
      ManagedPolicyArns:
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
  VSCodeIdeIdeBootstrapFunctionServiceRoleDefaultPolicyA4D18BC6:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action: iam:PassRole
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - WorkshopUserRole2CD0A22F
                - Arn
          - Action:
              - ec2:DescribeInstances
              - iam:ListInstanceProfiles
              - ssm:DescribeInstanceInformation
              - ssm:GetCommandInvocation
              - ssm:SendCommand
            Effect: Allow
            Resource: "*"
        Version: "2012-10-17"
      PolicyName: VSCodeIdeIdeBootstrapFunctionServiceRoleDefaultPolicyA4D18BC6
      Roles:
        - Ref: VSCodeIdeIdeBootstrapFunctionServiceRole45BD56C6
  VSCodeIdeIdeBootstrapFunctionADFBCE22:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        ZipFile: |-
          from __future__ import print_function
          import boto3
          import json
          import os
          import time
          import traceback
          import cfnresponse
          from botocore.exceptions import WaiterError

          def lambda_handler(event, context):
              print('Event: {}'.format(event))
              print('context: {}'.format(context))
              responseData = {}

              status = cfnresponse.SUCCESS

              if event['RequestType'] == 'Delete':
                  responseData = {'Success': 'Custom Resource removed'}
                  cfnresponse.send(event, context, status, responseData, 'CustomResourcePhysicalID')
              else:
                  try:
                      # Open AWS clients
                      ec2 = boto3.client('ec2')
                      ssm = boto3.client('ssm')

                      instance_id = event['ResourceProperties']['InstanceId']

                      print('Waiting for the instance to be ready...')
                      # Wait for Instance to become ready
                      instance_state = 'unknown'
                      print('Instance is currently in state'.format(instance_state))
                      while instance_state != 'running':
                          time.sleep(5)
                          di = ec2.describe_instances(InstanceIds=[instance_id])
                          instance_state = di['Reservations'][0]['Instances'][0]['State']['Name']
                          print('Waiting for instance in state: {}'.format(instance_state))

                      print('Instance is ready')

                      print('Waiting for instance to come online in SSM...')
                      for i in range(1, 60):
                        response = ssm.describe_instance_information(Filters=[{'Key': 'InstanceIds', 'Values': [instance_id]}])
                        if len(response["InstanceInformationList"]) == 0:
                          print('No instances in SSM')
                        elif len(response["InstanceInformationList"]) > 0 and \
                              response["InstanceInformationList"][0]["PingStatus"] == "Online" and \
                              response["InstanceInformationList"][0]["InstanceId"] == instance_id:
                          print('Instance is online in SSM')
                          break
                        time.sleep(10)

                      ssm_document = event['ResourceProperties']['SsmDocument']

                      ssm.send_command(
                          InstanceIds=[instance_id],
                          DocumentName=ssm_document,
                          CloudWatchOutputConfig={
                              'CloudWatchLogGroupName': event['ResourceProperties']['LogGroupName'],
                              'CloudWatchOutputEnabled': True
                          })

                      responseData = {'Success': 'Started bootstrapping for instance: '+instance_id}
                  except Exception as e:
                      status = cfnresponse.FAILED
                      tb_err = traceback.format_exc()
                      print(tb_err)
                      responseData = {'Error': tb_err}
                  finally:
                      cfnresponse.send(event, context, status, responseData, 'CustomResourcePhysicalID')
      Handler: index.lambda_handler
      Role:
        Fn::GetAtt:
          - VSCodeIdeIdeBootstrapFunctionServiceRole45BD56C6
          - Arn
      Runtime: python3.13
      Timeout: 900
    DependsOn:
      - VSCodeIdeIdeBootstrapFunctionServiceRoleDefaultPolicyA4D18BC6
      - VSCodeIdeIdeBootstrapFunctionServiceRole45BD56C6
  VSCodeIdeIdeLogGroup364F2B78:
    Type: AWS::Logs::LogGroup
    Properties:
      RetentionInDays: 7
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
  VSCodeIdeIdePasswordSecret39AD78F3:
    Type: AWS::SecretsManager::Secret
    Properties:
      GenerateSecretString:
        ExcludeCharacters: '"@/\\'
        ExcludePunctuation: true
        GenerateStringKey: password
        IncludeSpace: false
        PasswordLength: 32
        SecretStringTemplate: '{"password":""}'
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
  VSCodeIdeIdeDistribution613960F4:
    Type: AWS::CloudFront::Distribution
    Properties:
      DistributionConfig:
        DefaultCacheBehavior:
          AllowedMethods:
            - GET
            - HEAD
            - OPTIONS
            - PUT
            - PATCH
            - POST
            - DELETE
          CachePolicyId: 4135ea2d-6df8-44a3-9df3-4b5a84be39ad
          Compress: true
          OriginRequestPolicyId: 216adef6-5c7f-47e4-b989-5492eafa07d3
          TargetOriginId: UnicornStackVSCodeIdeIdeDistributionOrigin1442B6CAD
          ViewerProtocolPolicy: allow-all
        Enabled: true
        HttpVersion: http2
        IPV6Enabled: true
        Origins:
          - CustomOriginConfig:
              HTTPPort: 80
              OriginProtocolPolicy: http-only
              OriginSSLProtocols:
                - TLSv1.2
            DomainName:
              Fn::GetAtt:
                - VSCodeIde6CDD4972
                - PublicDnsName
            Id: UnicornStackVSCodeIdeIdeDistributionOrigin1442B6CAD
  VSCodeIdeIdeBootstrapWaitConditionHandle0A599C82:
    Type: AWS::CloudFormation::WaitConditionHandle
  VSCodeIdeIdeBootstrapWaitConditionEDA1E0E7:
    Type: AWS::CloudFormation::WaitCondition
    Properties:
      Count: 1
      Handle:
        Ref: VSCodeIdeIdeBootstrapWaitConditionHandle0A599C82
      Timeout: "1800"
    DependsOn:
      - VSCodeIdeIdeBootstrapDocument8DDB05AD
      - VSCodeIdeInstanceProfileE440C0DA
      - VSCodeIde6CDD4972
  VSCodeIdeIdeBootstrapDocument8DDB05AD:
    Type: AWS::SSM::Document
    Properties:
      Content:
        schemaVersion: "2.2"
        description: Bootstrap IDE
        parameters:
          BootstrapScript:
            type: String
            default: ""
            description: (Optional) Custom bootstrap script to run.
        mainSteps:
          - inputs:
              runCommand:
                - Fn::Sub:
                    - |-
                      bash << 'HEREDOC'
                      set -e

                      echo "Retrieving IDE password..."

                      PASSWORD_SECRET_VALUE=$(aws secretsmanager get-secret-value --secret-id "${passwordName}" --query 'SecretString' --output text)

                      export IDE_PASSWORD=$(echo "$PASSWORD_SECRET_VALUE" | jq -r '.password')

                      echo "Setting profile variables..."

                      # Set some useful variables
                      export TOKEN=$(curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600")
                      export AWS_REGION=$(curl -H "X-aws-ec2-metadata-token: $TOKEN" -s http://169.254.169.254/latest/dynamic/instance-identity/document | grep region | awk -F\" '{print $4}')
                      export EC2_PRIVATE_IP=$(curl -H "X-aws-ec2-metadata-token: $TOKEN" -s http://169.254.169.254/latest/meta-data/local-ipv4)

                      tee /etc/profile.d/workshop.sh <<EOF
                      export INSTANCE_IAM_ROLE_NAME="${instanceIamRoleName}"
                      export INSTANCE_IAM_ROLE_ARN="${instanceIamRoleArn}"

                      export AWS_REGION="$AWS_REGION"
                      export AWS_DEFAULT_REGION="$AWS_REGION"
                      export EC2_PRIVATE_IP="$EC2_PRIVATE_IP"

                      export IDE_DOMAIN="${domain}"
                      export IDE_URL="https://${domain}"
                      export IDE_PASSWORD="$IDE_PASSWORD"

                      alias code="code-server"
                      EOF

                      source /etc/profile.d/workshop.sh

                      echo "Setting PS1..."

                      # Set PS1
                      tee /etc/profile.d/custom_prompt.sh <<EOF
                      #!/bin/sh

                      export PROMPT_COMMAND='export PS1="\u:\w:$ "'
                      EOF

                      echo "Generating SSH key..."

                      # Generate an SSH key for ec2-user
                      sudo -u ec2-user bash -c "ssh-keygen -t rsa -N '' -f ~/.ssh/id_rsa -m pem <<< y"

                      echo "Installing AWS CLI..."

                      # Install AWS CLI
                      curl -LSsf -o /tmp/aws-cli.zip https://awscli.amazonaws.com/awscli-exe-linux-$(uname -m).zip
                      unzip -q -d /tmp /tmp/aws-cli.zip
                      /tmp/aws/install --update
                      rm -rf /tmp/aws*

                      echo "export ACCOUNT_ID=$(aws sts get-caller-identity --output text --query Account)" | sudo tee -a /etc/profile.d/workshop.sh
                      source /etc/profile.d/workshop.sh

                      echo "Installing Docker..."

                      # Install docker and base package
                      dnf install -y -q docker git >/dev/null
                      service docker start
                      usermod -aG docker ec2-user

                      echo "Installing code-server..."

                      # Install code-server
                      codeServer=$(dnf list installed code-server | wc -l)
                      if [ "$codeServer" -eq "0" ]; then
                        sudo -u ec2-user "codeServerVersion=${codeServerVersion}" bash -c 'curl -fsSL https://code-server.dev/install.sh | sh -s -- --version ${codeServerVersion}'
                        systemctl enable --now code-server@ec2-user
                      fi

                      sudo -u ec2-user bash -c 'mkdir -p ~/.config/code-server'
                      sudo -u ec2-user bash -c 'touch ~/.config/code-server/config.yaml'
                      tee /home/ec2-user/.config/code-server/config.yaml <<EOF
                      cert: false
                      auth: password
                      password: "$IDE_PASSWORD"
                      bind-addr: 127.0.0.1:8889
                      EOF

                      # Create default directory for workspace
                      sudo -u ec2-user bash -c 'mkdir -p ~/environment'

                      ENVIRONMENT_CONTENTS_ZIP=${environmentContentsZip}

                      if [ ! -z "$ENVIRONMENT_CONTENTS_ZIP" ]; then
                        echo "Adding environments archive..."

                        if [[ $ENVIRONMENT_CONTENTS_ZIP == s3:* ]]; then
                          aws s3 cp $ENVIRONMENT_CONTENTS_ZIP /tmp/environment.zip
                        else
                          curl -LSsf -o /tmp/environment.zip $ENVIRONMENT_CONTENTS_ZIP
                        fi

                        sudo -u ec2-user bash -c 'unzip -q /tmp/environment.zip -d ~/environment'

                        rm -rf /tmp/environment.zip
                      fi

                      STARTUP_EDITOR='none'

                      TERMINAL_ON_STARTUP="${terminalOnStartup}"
                      README_URL="${readmeUrl}"

                      if [ ! -z "$README_URL" ]; then
                        echo "Adding README..."
                        if [[ $README_URL == s3:* ]]; then
                          aws s3 cp $README_URL /home/ec2-user/environment/README.md
                        else
                          curl -LSsf -o /home/ec2-user/environment/README.md $README_URL
                        fi
                      fi

                      if [ "$TERMINAL_ON_STARTUP" = "true" ]; then
                        STARTUP_EDITOR='terminal'
                      elif [ -f /home/ec2-user/environment/README.md ]; then
                        STARTUP_EDITOR='readme'
                      fi

                      echo "Configuring code-server..."

                      sudo -u ec2-user bash -c 'mkdir -p ~/.local/share/code-server/User'
                      sudo -u ec2-user bash -c 'touch ~/.local/share/code-server/User/settings.json'
                      tee /home/ec2-user/.local/share/code-server/User/settings.json <<EOF
                      {
                        "extensions.autoUpdate": false,
                        "extensions.autoCheckUpdates": false,
                        "security.workspace.trust.enabled": false,
                        "workbench.startupEditor": "$STARTUP_EDITOR",
                        "task.allowAutomaticTasks": "on",
                        "telemetry.telemetryLevel": "off",
                        "update.mode": "none"
                      }
                      EOF

                      sudo -u ec2-user bash -c 'touch ~/.local/share/code-server/User/keybindings.json'
                      tee /home/ec2-user/.local/share/code-server/User/keybindings.json << 'EOF'
                      [
                        {
                          "key": "shift+cmd+/",
                          "command": "remote.tunnel.forwardCommandPalette"
                        }
                      ]
                      EOF

                      if [ ! -z "${splashUrl}" ]; then
                      echo "Configuring splash URL..."

                      sudo -u ec2-user bash -c 'touch ~/.local/share/code-server/User/tasks.json'
                      tee /home/ec2-user/.local/share/code-server/User/tasks.json << 'EOF'
                      {
                        "version": "2.0.0",
                        "tasks": [
                          {
                            "label": "Open Splash",
                            "command": "${!input:openSimpleBrowser}",
                            "presentation": {
                              "reveal": "always",
                              "panel": "new"
                            },
                            "runOptions": {
                              "runOn": "folderOpen"
                            }
                          }
                        ],
                        "inputs": [
                          {
                            "id": "openSimpleBrowser",
                            "type": "command",
                            "command": "simpleBrowser.show",
                            "args": [
                              "${splashUrl}"
                            ]
                          }
                        ]
                      }
                      EOF
                      fi

                      echo "Installing code-server extensions..."

                      EXTENSIONS="${extensions}"

                      IFS=',' read -ra array <<< "$EXTENSIONS"

                      # Iterate over each entry in the array
                      for extension in "${!array[@]}"; do
                        # Use retries as extension installation seems unreliable
                        sudo -u ec2-user bash -c "set -e; (r=5;while ! code-server --install-extension $extension --force ; do ((--r))||exit;sleep 5;done)"
                      done

                      if [ ! -f "/home/ec2-user/.local/share/code-server/coder.json" ]; then
                        sudo -u ec2-user bash -c 'touch ~/.local/share/code-server/coder.json'
                        echo '{ "query": { "folder": "/home/ec2-user/environment" } }' > /home/ec2-user/.local/share/code-server/coder.json
                      fi

                      echo "Restarting code-server..."

                      systemctl restart code-server@ec2-user

                      echo "Installing Caddy..."

                      # Install caddy
                      dnf copr enable -y -q @caddy/caddy epel-9-x86_64
                      dnf install -y -q caddy
                      systemctl enable --now caddy

                      tee /etc/caddy/Caddyfile <<EOF
                      http://${domain} {
                        handle /* {
                          reverse_proxy 127.0.0.1:8889
                        }
                        #GITEA
                      }
                      EOF

                      echo "Restarting caddy..."

                      systemctl restart caddy

                      if [ ! -f "/home/ec2-user/.local/share/code-server/coder.json" ]; then
                        sudo -u ec2-user bash -c 'touch ~/.local/share/code-server/coder.json'
                        echo '{ "query": { "folder": "/home/ec2-user/environment" } }' > /home/ec2-user/.local/share/code-server/coder.json
                      fi

                      ${installGitea}

                      echo "Running custom bootstrap script..."

                      ${customBootstrapScript}
                      HEREDOC

                      exit_code=$?

                      /opt/aws/bin/cfn-signal -e $exit_code '${waitConditionHandleUrl}'

                      exit $exit_code
                    - passwordName:
                        Fn::Join:
                          - "-"
                          - - Fn::Select:
                                - 0
                                - Fn::Split:
                                    - "-"
                                    - Fn::Select:
                                        - 6
                                        - Fn::Split:
                                            - ":"
                                            - Ref: VSCodeIdeIdePasswordSecret39AD78F3
                            - Fn::Select:
                                - 1
                                - Fn::Split:
                                    - "-"
                                    - Fn::Select:
                                        - 6
                                        - Fn::Split:
                                            - ":"
                                            - Ref: VSCodeIdeIdePasswordSecret39AD78F3
                      customBootstrapScript: |
                        date

                        echo '=== Clone Git repository ==='
                        sudo -H -u ec2-user bash -c "git clone https://github.com/ybezsonov/java-on-aws-yb ~/java-on-aws/"
                        sudo -H -u ec2-user bash -c "cd ~/java-on-aws && git checkout refactor"

                        echo '=== Setup IDE ==='
                        sudo -H -i -u ec2-user bash -c "~/java-on-aws/infrastructure/scripts/setup-ide.sh"

                        echo '=== Setup App ==='
                        sudo -H -i -u ec2-user bash -c "~/java-on-aws/infrastructure/scripts/setup-app.sh"
                      codeServerVersion: 4.95.3
                      instanceIamRoleName:
                        Ref: WorkshopUserRole2CD0A22F
                      splashUrl: ""
                      instanceIamRoleArn:
                        Fn::GetAtt:
                          - WorkshopUserRole2CD0A22F
                          - Arn
                      readmeUrl: ""
                      waitConditionHandleUrl:
                        Ref: VSCodeIdeIdeBootstrapWaitConditionHandle0A599C82
                      extensions: ms-azuretools.vscode-docker,ms-kubernetes-tools.vscode-kubernetes-tools,vscjava.vscode-java-pack
                      domain:
                        Fn::GetAtt:
                          - VSCodeIdeIdeDistribution613960F4
                          - DomainName
                      installGitea: echo bootstrapGitea was not provided
                      terminalOnStartup: "true"
                      environmentContentsZip: ""
            name: IdeBootstrapFunction
            action: aws:runShellScript
      DocumentFormat: YAML
      DocumentType: Command
      UpdateMethod: NewVersion
  VSCodeIdeIdeBootstrapResourceC2C4DC11:
    Type: AWS::CloudFormation::CustomResource
    Properties:
      ServiceToken:
        Fn::GetAtt:
          - VSCodeIdeIdeBootstrapFunctionADFBCE22
          - Arn
      LogGroupName:
        Ref: VSCodeIdeIdeLogGroup364F2B78
      SsmDocument:
        Ref: VSCodeIdeIdeBootstrapDocument8DDB05AD
      InstanceId:
        Ref: VSCodeIde6CDD4972
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
  VSCodeIdeIdePasswordExporterFunctionServiceRoleAC3A4C16:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
        Version: "2012-10-17"
      ManagedPolicyArns:
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
  VSCodeIdeIdePasswordExporterFunctionServiceRoleDefaultPolicy0FACB966:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - secretsmanager:DescribeSecret
              - secretsmanager:GetSecretValue
            Effect: Allow
            Resource:
              Ref: VSCodeIdeIdePasswordSecret39AD78F3
        Version: "2012-10-17"
      PolicyName: VSCodeIdeIdePasswordExporterFunctionServiceRoleDefaultPolicy0FACB966
      Roles:
        - Ref: VSCodeIdeIdePasswordExporterFunctionServiceRoleAC3A4C16
  VSCodeIdeIdePasswordExporterFunction9E9A4082:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        ZipFile: |-
          import traceback
          import cfnresponse
          import boto3
          import json

          def lambda_handler(event, context):
              print('Event: {}'.format(event))
              print('context: {}'.format(context))
              responseData = {}

              status = cfnresponse.SUCCESS

              if event['RequestType'] == 'Delete':
                  cfnresponse.send(event, context, status, responseData, 'CustomResourcePhysicalID')
              else:
                  try:
                      passwordName = event['ResourceProperties']['PasswordName']

                      secretsmanager = boto3.client('secretsmanager')

                      response = secretsmanager.get_secret_value(
                          SecretId=passwordName,
                      )
                      
                      responseData = json.loads(response['SecretString'])
                  except Exception as e:
                      status = cfnresponse.FAILED
                      tb_err = traceback.format_exc()
                      print(tb_err)
                      responseData = {'Error': tb_err}
                  finally:
                      cfnresponse.send(event, context, status, responseData, 'CustomResourcePhysicalID')
      Handler: index.lambda_handler
      Role:
        Fn::GetAtt:
          - VSCodeIdeIdePasswordExporterFunctionServiceRoleAC3A4C16
          - Arn
      Runtime: python3.13
      Timeout: 180
    DependsOn:
      - VSCodeIdeIdePasswordExporterFunctionServiceRoleDefaultPolicy0FACB966
      - VSCodeIdeIdePasswordExporterFunctionServiceRoleAC3A4C16
  VSCodeIdeIdePasswordExporter93551A8E:
    Type: AWS::CloudFormation::CustomResource
    Properties:
      ServiceToken:
        Fn::GetAtt:
          - VSCodeIdeIdePasswordExporterFunction9E9A4082
          - Arn
      PasswordName:
        Fn::Join:
          - "-"
          - - Fn::Select:
                - 0
                - Fn::Split:
                    - "-"
                    - Fn::Select:
                        - 6
                        - Fn::Split:
                            - ":"
                            - Ref: VSCodeIdeIdePasswordSecret39AD78F3
            - Fn::Select:
                - 1
                - Fn::Split:
                    - "-"
                    - Fn::Select:
                        - 6
                        - Fn::Split:
                            - ":"
                            - Ref: VSCodeIdeIdePasswordSecret39AD78F3
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
Parameters:
  SsmParameterValueawsserviceamiamazonlinuxlatestal2023amikernel61x8664C96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64
Outputs:
  IdeUrl:
    Description: Workshop IDE Url
    Value:
      Fn::Join:
        - ""
        - - https://
          - Fn::GetAtt:
              - VSCodeIdeIdeDistribution613960F4
              - DomainName
  IdePassword:
    Description: Workshop IDE Password
    Value:
      Fn::GetAtt:
        - VSCodeIdeIdePasswordExporter93551A8E
        - password
